@@ -2,6 +2,9 @@
 Version: 0.1.6
 Date: ????
   Changes:
+    - The base mod is now marked as optional, to allow compatibility with total overhaul mods
+  Bugfixes:
+    - Fixed a crash with the GUI module when a handler was removed between mod versions while being registered in global
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.5
 Date: 2020-06-30
